--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
-    "swiper": "^11.1.15",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
